--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,25 @@
   "name": "begin",
   "version": "1.0.0",
   "description": "For Basic Node connect React by Pound",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon ./server.js localhost 3080"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NVTP/BeginMERN.git"
+  },
+  "bugs": {
+    "url": "https://github.com//NVTP/BeginMERN/issues"
+  },
+  "homepage": "https://github.com//NVTP/BeginMERN#readme",
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.21"
   }
 }
