--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
@@ -44,5 +46,10 @@
       "last 1 safari version"
     ]
   },
-  "engines": { "node": "18.2" }
+  "engines": {
+    "node": "18.2"
+  },
+  "devDependencies": {
+    "cypress": "^13.3.0"
+  }
 }
